<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CheckoutActivity"
    android:orientation="vertical"
    android:background="@color/white">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvCartItems"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginBottom="48dp"/>

    <EditText
        android:id="@+id/etCardNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/card_number"
        android:inputType="number"
        android:maxLength="16"
        android:layout_marginBottom="16dp" />

    <EditText
        android:id="@+id/etExpirationDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/card_expire"
        android:inputType="number"
        android:maxLength="5"
        android:layout_marginBottom="16dp" />

    <EditText
        android:id="@+id/etCvv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/card_cvv"
        android:inputType="number"
        android:maxLength="3"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/btnPay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pagar"
        android:textColor="#ffffff"
        android:textAllCaps="false" />

</LinearLayout>